# stsci-aws-utils

./: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
stsci_aws_utils/: s3.py
tests/: certificate.py  conftest.py  test_s3.py
