[metadata]
name = stsci_aws_utils
provides = stsci_aws_utils
package_name = stsci_aws_utils
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = Common AWS code for STScI applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacetelescope/stsci-aws-utils
github_project = spacetelescope/stsci-aws-utils

[options]
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    aiohttp >=3.5.4, <4
    botocore >=1.12.218, <2
    defusedxml >=0.6.0, <1

[options.extras_require]
dev =
    black
    flake8
    pytest >=5.0.1, <6
    pytest-asyncio >=0.10.0, <1.0
    pytest-aiohttp >=0.3.0, <1.0
    cryptography >=2.7, <3
    pytest-cov >= 2.7.1, <3
    tox >=3.13.2, <4
    bandit

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg

[tool:pytest]
testpaths = tests
